# kras-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  test.txt
src/: detect.rs  detect2.rs  iter_input.rs  main.rs  parse.rs  pretty_value.rs  printer.rs  stopwatch.rs
