[package]
name = "kras"
version = "0.1.0"
authors = ["Nikita Bilous <nikita@bilous.me>"]
edition = "2018"

license = "MIT"
keywords = ["pretty", "log", "parse"]
categories = ["command-line-utilities"]
homepage = "https://github.com/acidnik/kras-rs"
repository = "https://github.com/acidnik/kras-rs"
readme = "README.md"
description = "Detect, highlight and pretty print structured data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = '2.33.0'
fileinput = "0.3.0"
pom = '3.1.0'
termcolor = '1.1.0'
atty = '0.2.14'
log = '0.4.8'
env_logger = '0.7.1'
chrono = '0.4.11'

[dev-dependencies]
rand = '0.7.3'

[dependencies.pretty]
features = ['termcolor']
version = '0.10.0'
