[package]
name = "kras"
version = "0.4.4"
authors = ["Nikita Bilous <nikita@bilous.me>"]
edition = "2021"

license = "MIT"
keywords = ["pretty", "log", "parse"]
categories = ["command-line-utilities"]
homepage = "https://github.com/acidnik/kras-rs"
repository = "https://github.com/acidnik/kras-rs"
readme = "README.md"
description = "Detect, highlight and pretty print almost any structured data inside plain text"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
fileinput = "0.3.0"
pom = "3.2.0"
termcolor = "1.1.2"
atty = "0.2.14"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
crossbeam = "0.8.1"
num_cpus = "1.13.0"
signal-hook = "0.3.14"

[dev-dependencies]
rand = "0.8.4"
permutator = "0.4.0"

[dependencies.pretty]
features = ['termcolor']
version = "0.10.0"
