[package]
name = "kras"
version = "0.5.1"
authors = ["Nikita Bilous <nikita@bilous.me>"]
edition = "2021"

license = "MIT"
keywords = ["pretty", "log", "parse"]
categories = ["command-line-utilities"]
homepage = "https://github.com/acidnik/kras-rs"
repository = "https://github.com/acidnik/kras-rs"
readme = "README.md"
description = "Detect, highlight and pretty print almost any structured data inside plain text"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }
fileinput = "0.3.0"
pom = "3.2.0"
termcolor = "1.2.0"
atty = "0.2.14"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"
crossbeam = "0.8.2"
num_cpus = "1.15.0"
signal-hook = "0.3.15"

[dependencies.pretty]
features = ['termcolor']
version = "0.11.3"
